--- a/css/style.css
+++ b/css/style.css
@@ -333,36 +333,41 @@ th{
   color: #808080;
 }
 .input-text{
-  margin:  0 auto;
+  margin:  16px auto;
   height: 40px;
   border: none;
   caret-color: pink;
 }
-
 .form-btn a{
   position: relative;
   background: linear-gradient(90deg,rgb(255, 136, 156),rgb(255, 0, 55));
   width: 15%;
+  margin: 24px 16px 24px 0;
+  padding: 24px 0;
   display: block;
-  text-align: center;
-  padding: 16px 0;
   text-decoration: none;
   border-radius: 40px;
   margin: 0 auto;
   color: #fff;
+  box-shadow:0 8px 3px #af4c4c;
 }
-.form-btn a ::before{
+.form-btn a::before{
   content: "";
   position: absolute;
-  top: 20%;
-  left: 5%;
-  background: url(/img/mailicon.svg)no-repeat;
-  background-size: cover;
-  width: 10%;
-  height: 100%;
+  top: 50%;
+  left: 3%;
+  background: url(../img/mailicon.svg)no-repeat;
+  background-size: auto;
+  width: 20%;
+  height: 50%;
   transform: translate(0,-50%);
 }
 
 .footer{
   text-align: center;
+  width: 100%;
+  height: 32px;
+  margin-top: 40px;
+  padding: 24px 0;
+  background-color: #d4d4d4;
 }
